2006-11-16  Albert Chu <chu11@llnl.gov>

	* common/src/list.c (list_alloc_aux, list_free_aux): Fix potential
	mem-leak issue.
	
2006-11-14  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sensor-api.c (get_sensor_reading): Narrow corner
	case fixes from 2006-11-13.
	
2006-11-13  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/Makefile.am: Add libsdr and libsensor dependency check.

        * common/src/ipmi-sdr-api.c (_get_sdr_full_record): Fix corner case.

	* common/src/ipmi-sensor-api.c (get_sensor_reading): Fix corner cases.

        * include/freeipmi/ipmi-sdr-record-types.h: Add additional analog
        format define.

	* NEWS: Updated with merge changes.
	
2006-11-13  Albert Chu <chu11@llnl.gov>

	* configure.ac, freeipmi.spec.in: Prepare for release.

	* Release-0_3_0
	
2006-11-09  Anand Babu  <ab@zresearch.com>

	* doc/freeipmi.texi, doc/freeipmi-faq.texi: updated copying
	section as per latest GNU Evaluation Team's recommendation.
	
	* doc/permissions.texi: removed.

2006-11-06  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi.texi, doc/freeipmi-faq.texi: Various updates.

2006-11-06  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Fix URL for release.

	* Tagged Release-0_3_0-beta0
	
2006-11-06  Albert Chu <chu11@llnl.gov>

	* NEWS: Split news for users and developers.

	* commons/rc/Makefile.am: Dist missing .h files.

2006-11-06 Anand V. Avati <avati@zresearch.com>

	* bmc-config/src/bmc-config-api.c:
	free fiid_obj after using to get max_channel_users_id

	* bmc-config/src/bmc-config.c:
	free argugments.filename if exists after using it

	* common/src/ipmi-sdr-api.c:
	use getpwuid_r in _get_home_directory() instead of getpwuid
	to avoid mem leak

	* ipmi-sel/src/ipmi-sel.c:
	free sdr_record_list in run_cmd_args after its use
	
2006-11-06  Albert Chu <chu11@llnl.gov>

	* configure.ac, Makefile.am, freeipmi.spec.in, ipmi-pef/: Remove
	ipmi-pef for 0.3.0 release line.

2006-11-06  Albert Chu <chu11@llnl.gov>

	* Tagged Release-0_3_0_base.
