@@ -1,3 +1,12 @@
+2006-12-08  Anand Babu  <ab@zresearch.com>
+
+	* common/src/ipmi-sdr-api.c: fixes the "SDR cache creation under
+	/tmp" bug reported by Tejram Meena <tejram@in.niksun.com>.
+
+	* ipmi-sensors/src/ipmi-sensors.c: give proper error message when
+	cache creation fails.
+
+
 2006-11-16  Albert Chu <chu11@llnl.gov>
 
 	* common/src/list.c (list_alloc_aux, list_free_aux): Fix potential
